# swagger/swagger.yml
@@ -166,6 +166,50 @@ paths:
           description: '{int} models.Concepto.ID'
         "403":
           description: body is empty
+  /conceptos/:
+    get:
+      tags:
+      - conceptos
+      description: get all objects
+      operationId: ConceptosController.GetTree
+      parameters:
+      - in: fullTree
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      responses:
+        "200":
+          description: Conceptos []models.Conceptos
+        "403":
+          description: :objectId is empty
+    post:
+      tags:
+      - conceptos
+      description: Post models.Conceptos
+      operationId: ConceptosController.Post models.Conceptos
+      parameters:
+      - in: body
+        name: body
+        description: Body para la creacion de models.Conceptos
+        required: true
+        schema:
+          $ref: '#/definitions/models.Conceptos'
+      responses:
+        "200":
+          description: '{int} models.Conceptos.Id'
+        "403":
+          description: body is empty
+  /conceptos/{Codigo}:
+    get:
+      tags:
+      - conceptos
+      description: get all objects
+      operationId: ConceptosController.Get
+      responses:
+        "200":
+          description: Conceptos models.Conceptos
+        "403":
+          description: :objectId is empty
   /detalle_cuenta_contable/:
     get:
       tags:
@@ -510,6 +554,61 @@ definitions:
         type: string
       Nombre:
         type: string
+  models.Conceptos:
+    title: Conceptos
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      Aplicacion:
+        type: string
+      AreaFuncional:
+        type: integer
+        format: int64
+      ClaseTransaccionId:
+        type: integer
+        format: int64
+      Codigo:
+        type: string
+      CodigoBogdata:
+        type: string
+      CuentasCredito:
+        type: array
+        items:
+          type: string
+      CuentasDebito:
+        type: array
+        items:
+          type: string
+      EntidadPresupuestal:
+        type: integer
+        format: int64
+      FechaCreacion:
+        type: string
+      FechaModificacion:
+        type: string
+      Hijos:
+        type: array
+        items:
+          type: string
+      Metadatos:
+        type: string
+      Nivel:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+      Padre:
+        type: string
+      RubroPresupuestalId:
+        type: string
+      TipoComprobanteId:
+        type: string
+      TipoTransaccionId:
+        type: integer
+        format: int64
+      id:
+        $ref: '#/definitions/primitive.ObjectID'
   models.General:
     title: General
     type: object
@@ -598,6 +697,9 @@ definitions:
         type: string
       TipoDocumento:
         type: string
+  primitive.ObjectID:
+    title: ObjectID
+    type: object
 tags:
 - name: nodo_cuenta_contable
   description: |
@@ -620,3 +722,6 @@ tags:
 - name: centro_costos
   description: |
     CentroCostos ...
+- name: conceptos
+  description: |
+    ConceptosController ...
